typos in subject

--- a/subject/AVG_lab1.tex
+++ b/subject/AVG_lab1.tex
@@ -64,7 +64,7 @@ The video should be downloaded from my website in the lab directory:
 
 It may be useful to use an IDE like Qt Creator, to do so you have to launch it from the command line then:
 \begin{itemize}
- \item Load the \texttt{CMakeLists.txt} file as a new project
+ \item Open project and load the \texttt{CMakeLists.txt} file
  \item Set the \texttt{build} folder as the build folder
 \end{itemize}
  
